--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "server": "node --watch src/server.js"
   },
   "repository": {
@@ -18,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/Vinny-Bass/no-lib-websockets/issues"
   },
-  "homepage": "https://github.com/Vinny-Bass/no-lib-websockets#readme"
+  "homepage": "https://github.com/Vinny-Bass/no-lib-websockets#readme",
+  "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0"
+  }
 }
